--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
-    container_name: mariadb
+    container_name: phpMyAdmin
     ports:
       - 8000:80
     environment:
